@@ -1,83 +1,73 @@
 package com.example.miniprojet_genie_logiciel.services;
 
+import com.example.miniprojet_genie_logiciel.dto.CreateEpicDTO;
 import com.example.miniprojet_genie_logiciel.dto.EpicDTO;
-import com.example.miniprojet_genie_logiciel.dto.UserStoryDTO;
+import com.example.miniprojet_genie_logiciel.dto.UpdateEpicDTO;
 import com.example.miniprojet_genie_logiciel.entities.Epic;
-import com.example.miniprojet_genie_logiciel.entities.UserStory;
+import com.example.miniprojet_genie_logiciel.entities.ProductBacklog;
 import com.example.miniprojet_genie_logiciel.mapper.EpicMapper;
-import com.example.miniprojet_genie_logiciel.mapper.UserStoryMapper;
 import com.example.miniprojet_genie_logiciel.repository.EpicRepository;
+import com.example.miniprojet_genie_logiciel.repository.ProductBacklogRepository;
 import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
-import java.util.ArrayList;
 import java.util.List;
-import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class EpicService {
 
     private final EpicRepository epicRepository;
+    private final ProductBacklogRepository productBacklogRepository;
     private final EpicMapper epicMapper;
-    private final UserStoryMapper userStoryMapper;
 
-    // Création d'un Epic
-    public EpicDTO createEpic(EpicDTO epicDTO) {
-        Epic epic = epicMapper.toEntity(epicDTO);
+    public EpicDTO createEpic(CreateEpicDTO dto) {
+        ProductBacklog backlog = productBacklogRepository.findById(dto.getProductBacklogId())
+                .orElseThrow(() -> new EntityNotFoundException("ProductBacklog not found with id: " + dto.getProductBacklogId()));
+
+        Epic epic = epicMapper.fromCreateDto(dto);
+        epic.setProductBacklog(backlog);
+
         Epic savedEpic = epicRepository.save(epic);
         return epicMapper.toDto(savedEpic);
     }
 
-    // Récupération de tous les Epics
     public List<EpicDTO> getAllEpics() {
-        List<Epic> epics = epicRepository.findAll();
-        return epics.stream()
+        return epicRepository.findAll().stream()
                 .map(epicMapper::toDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 
-    // Récupération d'un Epic par son id
-    public Optional<EpicDTO> getEpicById(Long id) {
-        return epicRepository.findById(id)
-                .map(epicMapper::toDto);
+    public EpicDTO getEpicById(Long id) {
+        Epic epic = epicRepository.findById(id)
+                .orElseThrow(() -> new EntityNotFoundException("Epic not found with id: " + id));
+        return epicMapper.toDto(epic);
     }
 
-    // Mise à jour d'un Epic
-    public EpicDTO updateEpic(EpicDTO epicDTO) {
-        Epic epic = epicMapper.toEntity(epicDTO);
+    public EpicDTO updateEpic(Long id, UpdateEpicDTO dto) {
+        Epic epic = epicRepository.findById(id)
+                .orElseThrow(() -> new EntityNotFoundException("Epic not found with id: " + id));
+
+        epicMapper.updateFromDto(dto, epic);
         Epic updatedEpic = epicRepository.save(epic);
         return epicMapper.toDto(updatedEpic);
     }
 
-    // Suppression d'un Epic
     public void deleteEpic(Long id) {
+        if (!epicRepository.existsById(id)) {
+            throw new EntityNotFoundException("Epic not found with id: " + id);
+        }
         epicRepository.deleteById(id);
     }
 
-    // Lien d'une User Story à un Epic
-    public EpicDTO addUserStoryToEpic(Long epicId, UserStoryDTO userStoryDTO) {
-        Epic epic = epicRepository.findById(epicId)
-                .orElseThrow(() -> new EntityNotFoundException("Epic not found with id: " + epicId));
-        if (epic.getUserStories() == null) {
-            epic.setUserStories(new ArrayList<>());
-        }
-        UserStory userStory = userStoryMapper.toEntity(userStoryDTO);
-        epic.getUserStories().add(userStory);
-        userStory.setEpic(epic);
-        Epic savedEpic = epicRepository.save(epic);
-        return epicMapper.toDto(savedEpic);
-    }
+    public List<EpicDTO> getEpicsByBacklogId(Long backlogId) {
+        ProductBacklog backlog = productBacklogRepository.findById(backlogId)
+                .orElseThrow(() -> new EntityNotFoundException("ProductBacklog not found with id: " + backlogId));
 
-    // Visualisation des User Stories liées à un Epic
-    public List<UserStoryDTO> getUserStoriesByEpic(Long epicId) {
-        Epic epic = epicRepository.findById(epicId)
-                .orElseThrow(() -> new EntityNotFoundException("Epic not found with id: " + epicId));
-        return epic.getUserStories().stream()
-                .map(userStoryMapper::toDto)
-                .toList();
+        return backlog.getEpics().stream()
+                .map(epicMapper::toDto)
+                .collect(Collectors.toList());
     }
 }
-
-
