@@ -1,54 +1,64 @@
 package com.example.miniprojet_genie_logiciel.services;
 
+import com.example.miniprojet_genie_logiciel.dto.CreateTaskDTO;
 import com.example.miniprojet_genie_logiciel.dto.TaskDTO;
+import com.example.miniprojet_genie_logiciel.dto.UpdateTaskDTO;
 import com.example.miniprojet_genie_logiciel.entities.Task;
+import com.example.miniprojet_genie_logiciel.entities.UserStory;
 import com.example.miniprojet_genie_logiciel.mapper.TaskMapper;
 import com.example.miniprojet_genie_logiciel.repository.TaskRepository;
+import com.example.miniprojet_genie_logiciel.repository.UserStoryRepository;
 import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
+import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class TaskService {
 
     private final TaskRepository taskRepository;
+    private final UserStoryRepository userStoryRepository;
     private final TaskMapper taskMapper;
 
-    // Création d'une Task
-    public TaskDTO createTask(TaskDTO taskDTO) {
-        Task task = taskMapper.toEntity(taskDTO);
-        Task savedTask = taskRepository.save(task);
-        return taskMapper.toDto(savedTask);
+    @PreAuthorize("hasAnyRole('ADMIN', 'PRODUCT_OWNER', 'SCRUM_MASTER')")
+    public TaskDTO createTask(CreateTaskDTO dto) {
+        UserStory us = userStoryRepository.findById(dto.getUserStoryId())
+                .orElseThrow(() -> new EntityNotFoundException("UserStory not found with id: " + dto.getUserStoryId()));
+
+        Task task = taskMapper.fromCreateDto(dto, us);
+        Task saved = taskRepository.save(task);
+        return taskMapper.toDto(saved);
     }
 
-    // Récupération de toutes les Tasks
+    @PreAuthorize("hasAnyRole('ADMIN', 'PRODUCT_OWNER', 'SCRUM_MASTER', 'DEVELOPER')")
+    public TaskDTO getTaskById(Long id) {
+        return taskRepository.findById(id)
+                .map(taskMapper::toDto)
+                .orElseThrow(() -> new EntityNotFoundException("Task not found with id: " + id));
+    }
+
+    @PreAuthorize("hasAnyRole('ADMIN', 'PRODUCT_OWNER', 'SCRUM_MASTER', 'DEVELOPER')")
     public List<TaskDTO> getAllTasks() {
         return taskRepository.findAll().stream()
                 .map(taskMapper::toDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 
-    // Récupération d'une Task par son id
-    public Optional<TaskDTO> getTaskById(Long id) {
-        return taskRepository.findById(id)
-                .map(taskMapper::toDto);
+    @PreAuthorize("hasAnyRole('ADMIN', 'PRODUCT_OWNER', 'SCRUM_MASTER')")
+    public TaskDTO updateTask(Long id, UpdateTaskDTO dto) {
+        Task task = taskRepository.findById(id)
+                .orElseThrow(() -> new EntityNotFoundException("Task not found with id: " + id));
+
+        taskMapper.updateFromDto(dto, task);
+        Task updated = taskRepository.save(task);
+        return taskMapper.toDto(updated);
     }
 
-    // Mise à jour d'une Task (incluant le statut)
-    public TaskDTO updateTask(TaskDTO taskDTO) {
-        if (!taskRepository.existsById(taskDTO.getId())) {
-            throw new EntityNotFoundException("Task not found with id: " + taskDTO.getId());
-        }
-        Task task = taskMapper.toEntity(taskDTO);
-        Task updatedTask = taskRepository.save(task);
-        return taskMapper.toDto(updatedTask);
-    }
-
-    // Suppression d'une Task par son id
+    @PreAuthorize("hasAnyRole('ADMIN', 'PRODUCT_OWNER')")
     public void deleteTask(Long id) {
         if (!taskRepository.existsById(id)) {
             throw new EntityNotFoundException("Task not found with id: " + id);
@@ -56,14 +66,13 @@ public class TaskService {
         taskRepository.deleteById(id);
     }
 
-    // Mise à jour du status d'une Task (ex: To Do, In Progress, Done)
-    public TaskDTO updateTaskStatus(Long taskId, String status) {
-        Task task = taskRepository.findById(taskId)
-                .orElseThrow(() -> new EntityNotFoundException("Task not found with id: " + taskId));
-        task.setStatus(status);
-        Task updatedTask = taskRepository.save(task);
-        return taskMapper.toDto(updatedTask);
+    @PreAuthorize("hasAnyRole('ADMIN', 'PRODUCT_OWNER', 'SCRUM_MASTER', 'DEVELOPER')")
+    public List<TaskDTO> getTasksByUserStory(Long userStoryId) {
+        UserStory us = userStoryRepository.findById(userStoryId)
+                .orElseThrow(() -> new EntityNotFoundException("UserStory not found with id: " + userStoryId));
+
+        return us.getTasks().stream()
+                .map(taskMapper::toDto)
+                .collect(Collectors.toList());
     }
 }
-
-
